{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 202,
  "lineage": "554bedf0-4aa3-215b-5219-b2a7a8df3585",
  "resources": [
    {
      "module": "module.vpc_name",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0dea545841a131ca2",
            "public_dns": "ec2-34-206-86-57.compute-1.amazonaws.com",
            "public_ip": "34.206.86.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.i_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AppServer01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc96feef8c6bbff3",
            "arn": "arn:aws:ec2:us-east-1:669470198377:instance/i-0ad706ff8064c35e2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ad706ff8064c35e2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyEC2KeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-099f895cdc2983f0e",
            "private_dns": "ip-10-0-2-17.ec2.internal",
            "private_ip": "10.0.2.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-00893f08e4c299ff4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03aef41e7bed45227",
            "tags": {
              "Name": "AppServer01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03ff9ff5987e19756"
            ]
          },
          "depends_on": [
            "module.vpc_name",
            "module.webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc96feef8c6bbff3",
            "arn": "arn:aws:ec2:us-east-1:669470198377:instance/i-0afe834222763757f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0afe834222763757f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyEC2KeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-06f1eccc6646edd70",
            "private_dns": "ip-10-0-0-47.ec2.internal",
            "private_ip": "10.0.0.47",
            "public_dns": "ec2-3-82-105-254.compute-1.amazonaws.com",
            "public_ip": "3.82.105.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-051a7e7143d75eabd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9e29f33b35ae593",
            "tags": {
              "Name": "WebServer01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03ff9ff5987e19756"
            ]
          },
          "depends_on": [
            "module.vpc_name",
            "module.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_name",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "i_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0aac591dd7426a829",
            "owner_id": "669470198377",
            "tags": {
              "Name": "Internet_GW"
            },
            "vpc_id": "vpc-09728f5bacb2988c5"
          },
          "depends_on": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_name",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "n_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dea545841a131ca2",
            "id": "nat-002f15c71d620e102",
            "network_interface_id": "eni-0ef3247d70f6515a2",
            "private_ip": "10.0.0.192",
            "public_ip": "34.206.86.57",
            "subnet_id": "subnet-0f9e29f33b35ae593",
            "tags": {
              "Name": "NAT_Gateway"
            }
          },
          "depends_on": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.i_gw",
            "aws_subnet.public_sn[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_name",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09dfde09a805e85de",
            "owner_id": "669470198377",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-002f15c71d620e102",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_Subnet_Route"
            },
            "vpc_id": "vpc-09728f5bacb2988c5"
          },
          "depends_on": [
            "aws_nat_gateway.n_gw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_name",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d6a62922008cf7da",
            "owner_id": "669470198377",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aac591dd7426a829",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Subnet_Route"
            },
            "vpc_id": "vpc-09728f5bacb2988c5"
          },
          "depends_on": [
            "aws_internet_gateway.i_gw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_name",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0927dc5ebe0a028b9",
            "route_table_id": "rtb-09dfde09a805e85de",
            "subnet_id": "subnet-03aef41e7bed45227"
          },
          "depends_on": [
            "aws_route_table.private_rt",
            "aws_subnet.private_sn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_name",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afa73ffdfe1ddd27",
            "route_table_id": "rtb-0d6a62922008cf7da",
            "subnet_id": "subnet-0f9e29f33b35ae593"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.public_sn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0723cb8a0ce58e090",
            "route_table_id": "rtb-0d6a62922008cf7da",
            "subnet_id": "subnet-0f0d685e78858cade"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.public_sn"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669470198377:security-group/sg-03ff9ff5987e19756",
            "description": "Allow HTTP/S and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ff9ff5987e19756",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": null,
            "owner_id": "669470198377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09728f5bacb2988c5"
          }
        }
      ]
    },
    {
      "module": "module.vpc_name",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sn",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669470198377:subnet/subnet-03aef41e7bed45227",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03aef41e7bed45227",
            "map_public_ip_on_launch": false,
            "owner_id": "669470198377",
            "tags": {
              "Name": "Private_Subnet_0"
            },
            "vpc_id": "vpc-09728f5bacb2988c5"
          },
          "depends_on": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_name",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669470198377:subnet/subnet-0f9e29f33b35ae593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0f9e29f33b35ae593",
            "map_public_ip_on_launch": true,
            "owner_id": "669470198377",
            "tags": {
              "Name": "Public_Subnet_0"
            },
            "vpc_id": "vpc-09728f5bacb2988c5"
          },
          "depends_on": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669470198377:subnet/subnet-0f0d685e78858cade",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f0d685e78858cade",
            "map_public_ip_on_launch": true,
            "owner_id": "669470198377",
            "tags": {
              "Name": "Public_Subnet_1"
            },
            "vpc_id": "vpc-09728f5bacb2988c5"
          },
          "depends_on": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_name",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669470198377:vpc/vpc-09728f5bacb2988c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041a22917bf01f884",
            "default_route_table_id": "rtb-0d5cc4b82313a1e6f",
            "default_security_group_id": "sg-0ffd9c82c77f95ab8",
            "dhcp_options_id": "dopt-be2e7ec5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09728f5bacb2988c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d5cc4b82313a1e6f",
            "owner_id": "669470198377",
            "tags": {
              "Name": "Custom_VPC"
            }
          }
        }
      ]
    }
  ]
}